--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="message_Content">DO you want to delete this record?</string>
     <string name="message_yes">Yes</string>
     <string name="message_no">No</string>
-    <string name="hint1">Enter your express code here!</string>
+    <string name="hint1">Enter your express number here!</string>
     <string name="hint2">Enter comment here!</string>
     <string name="btn_Company">Choose express Company</string>
     <string name="btn_track">TRACK</string>
